--- a/design-thinking-workshop.html
+++ b/design-thinking-workshop.html
@@ -92,7 +92,7 @@
           <figcaption>The worksheets for the ideate stage of the design thinking workshop.</figcaption>
         </figure>
       <div class="content-block">
-        <p>After the time was up they presented their ideas to the group and voted on what to prototype. The selected idea to explore was ‘better signage at stations’.
+        <p>After the time was up they presented their ideas to the group and voted on what to prototype. The selected idea to explore was ‘better sign-age at stations’.
         </p>
         <h4>Prototype <span>20 min</span></h4>
         <p>The participants explored the idea individually  and were given an assortment of coloured paper, tape, scissors and glue to build their prototype. All of the participants chose to draw their prototype.
