--- a/fomo-app.html
+++ b/fomo-app.html
@@ -53,7 +53,7 @@
       <figcaption>Gr8ti-tude, wake up happier and combat FoMO.</figcaption>
     </figure>
     <div class="content-block">
-      <p>Using the alarm clock (setting and waking up to) as an external trigger, Gr8ti-tude offers the user a chance to create a positve tiny new behaviour to receive health benefits and improve general happiness. Gr8ti-tude is based on proven
+      <p>Using the alarm clock (setting and waking up to) as an external trigger, Gr8ti-tude offers the user a chance to create a positive tiny new behaviour to receive health benefits and improve general happiness. Gr8ti-tude is based on proven
         psychological principles of practicing gratitude.</p>
       <h4><span>Software used</span></h4>
       <ul>
@@ -125,7 +125,7 @@
       <h3>Scenario</h3>
       <p>Once in bed, Maria uses Gr8ti-tude to set her alarm and then choose 3 things she is grateful for. The trigger of setting the alarm helps the act of gratitude easily become a habit. The Gr8ti-tude alarm reinforces Maria's happiness in the
         morning by waking her up and making her reflect on what she is grateful for.</p>
-      <p>By practising gratitude, Maria will be thankful and happy with what she has achieved and experienced, making her immune to FoMO and increasing her general happiness.</p>
+      <p>By practicing gratitude, Maria will be thankful and happy with what she has achieved and experienced, making her immune to FoMO and increasing her general happiness.</p>
     </div>
     <figure class="wide-image">
       <img class="responsive-h" src="img/Maria-fomo-storyboard.png" alt="Picture of Maria using Gr8-itude">
@@ -134,7 +134,7 @@
     <div class="content-block">
       <h3>Mood board</h3>
       <h4><span>Colour</span></h4>
-      <p>The app is used at two different times; at night – setting the alarm before sleep – and in the morning – waking up to the alarm. I chose a relaxing colour scheme for the night screens, to help prepare the user for sleep. The morning colour palete is vibrant and warm to help the user wake up.</p>
+      <p>The app is used at two different times; at night – setting the alarm before sleep – and in the morning – waking up to the alarm. I chose a relaxing colour scheme for the night screens, to help prepare the user for sleep. The morning colour palette is vibrant and warm to help the user wake up.</p>
       <h4><span>Typefaces</span></h4>
       <p>For the logo, headings and button text I used the typeface Quicksand. It is sans-serif display typeface with rounded terminals that is also legible at small font sizes.</p>
       <p>Lato is used for body text and sub-headings. I chose Lato for its warmth and stability, it is legible at small font sizes and it has classical proportions.</p>
@@ -147,7 +147,7 @@
     </figure>
     <div class="content-block">
       <h3>Logo</h3>
-      <p>I wanted the logo to reflect the alarm function of the app and for it to also incorprate a reference to the circadian rhythm. The roundness of the logo is for friendliness, according to Susan Weinschenk PhD, 'people prefer objects with
+      <p>I wanted the logo to reflect the alarm function of the app and for it to also incorporate a reference to the circadian rhythm. The roundness of the logo is for friendliness, according to Susan Weinschenk PhD, 'people prefer objects with
         curves – a preference that’s evident even in brain scans.' On the splash screen the arrows on the face of the clock can be animated to indicate loading, as seen in the <a class="link" target="_blank" href="https://projects.invisionapp.com/prototype/Gr8ti-tude-Colour-sketch-cjvb1q85h00eiqv01mvzhnwoy/play/">InVision
           Studio clickable prototype</a>.</p>
     </div>
@@ -165,7 +165,7 @@
     </figure>
     <div class="content-block">
       <h3>Lo-Fi Wireframes</h3>
-      <p>The next step involved sketching out the user flow and the basic UI of the app. To interate quickly through ideas I made wireframes from stacking stick-notes ontop of each other, this allowed me to quickly change components and test out
+      <p>The next step involved sketching out the user flow and the basic UI of the app. To interate quickly through ideas I made wireframes from stacking stick-notes on-top of each other, this allowed me to quickly change components and test out
         different ideas.</p>
     </div>
     <figure class="wide-image">
