--- a/qual-and-quan.html
+++ b/qual-and-quan.html
@@ -29,20 +29,27 @@
     <main>
       <div class="content-block">
         <h3>Challenge</h3>
-        <p>A case study of the <a class="link" target="_blank" href="#">Google Merchandise Store</a> using qualitative and quantitative research to improve the e-Commerce site.<br><br><br>This page is currently underconstruction.
+        <p>A case study of the <a class="link" target="_blank" href="#">Google Merchandise Store</a> using qualitative and quantitative research to improve the e-Commerce. The timeframe of this project was 2 weeks.<br><br><br>This page is currently underconstruction.
         </p>
-        <h3>Solution</h3>
-        <p>After distilling data from Google Analytics and creating usability tests to confirm these observations, I discovered that surprisingly the Google Merchandise Store has a lot of room for improvement. For the sake I this case study I concentrated on user flow of finding products and the check-out process.
+        <h3>Findings</h3>
+        <p>After distilling data from Google Analytics and creating usability tests to confirm these observations, I discovered that surprisingly the Google Merchandise Store has a lot of room for improvement. The focus of this case study is on the user flow of finding products and the check-out process, other areas of the site require attention but are outside the scope of this project.
         </p>
       </div>
-
+      <div class="content-block">
+        <h3>Who are our users and how do they shop?</h3>
+        <p>Before creating the usability tests, I wanted to gather data to see who our users are and how do they interact with the site. Perhaps not surprising to find is that over a third of sessions are from desktop devices.
+        </p>
+      </div>
+      <figure class="wide-image">
+        <img class="responsive-h" src="img/qual-and-quan/google-merch-slide.jpg" alt="Pie chart showing users per device.">
+        <figcaption>Pie chart of users per device.</figcaption>
+      </figure>
+      <div class="content-block">
+        <p>Considering the ratio of desktop sessions to mobile it was a little surprising to find that the majority of transactions actually come from mobile.</p>
+      </div>
         <figure class="wide-image">
-          <img class="responsive-h" src="img/qual-and-quan/google-merch-slide.jpg" alt="xxx">
-          <figcaption>xxx</figcaption>
-        </figure>
-        <figure class="wide-image">
-          <img class="responsive-h" src="img/qual-and-quan/google-merch-slide2.jpg" alt="xxx">
-          <figcaption>xxx</figcaption>
+          <img class="responsive-h" src="img/qual-and-quan/google-merch-slide2.jpg" alt="Stacked bar chart of transaction per time of day">
+          <figcaption>Graph of transactions per device by time of day.</figcaption>
         </figure>
         <figure class="wide-image">
           <img class="responsive-h" src="img/qual-and-quan/google-merch-slide3.jpg" alt="xxx">
