--- a/qual-and-quan.html
+++ b/qual-and-quan.html
@@ -51,10 +51,16 @@
           <img class="responsive-h" src="img/qual-and-quan/google-merch-slide2.jpg" alt="Stacked bar chart of transaction per time of day">
           <figcaption>Graph of transactions per device by time of day.</figcaption>
         </figure>
+        <div class="content-block">
+          <p>I delved into this phenomenon a little further, so I looked at the sessions at each time of day and overlayed it on to the transactions.</p>
+        </div>
         <figure class="wide-image">
-          <img class="responsive-h" src="img/qual-and-quan/google-merch-slide3.jpg" alt="xxx">
-          <figcaption>xxx</figcaption>
+          <img class="responsive-h" src="img/qual-and-quan/google-merch-slide3.jpg" alt="Stacked bar chart of transaction per time of day with sessions overlay.">
+          <figcaption>Overlay of sessions.</figcaption>
         </figure>
+        <div class="content-block">
+          <p>Because I wasn't accessing the Google Analytics as admin (Google gives everyone access to their merchandise store's analytics) I couldn't track people across devices, so I am making the assumption that people search on their desktops – at work – and then in their lunch breaks or commutes they are making the purchases on thier phones.</p>
+        </div>
         <figure class="wide-image">
           <img class="responsive-h" src="img/qual-and-quan/google-merch-slide4.jpg" alt="xxx">
           <figcaption>xxx</figcaption>
