--- a/qual-and-quan.html
+++ b/qual-and-quan.html
@@ -34,6 +34,13 @@
         <h3>Findings</h3>
         <p>After distilling data from Google Analytics and creating usability tests to confirm these observations, I discovered that surprisingly the Google Merchandise Store has a lot of room for improvement. The focus of this case study is on the user flow of finding products and the check-out process, other areas of the site require attention but are outside the scope of this project.
         </p>
+        <h4><span>Software used</span></h4>
+        <ul>
+          <li>Google Analytics</li>
+          <li>Illustrator</li>
+          <li>Indesign</li>
+          <li>QuickTime Player (to record usability tests)</li>
+        </ul>
       </div>
       <div class="content-block">
         <h3>Who are our users and how do they shop?</h3>
