--- a/qual-and-quan.html
+++ b/qual-and-quan.html
@@ -29,7 +29,7 @@
     <main>
       <div class="content-block">
         <h3>Challenge</h3>
-        <p>A case study of the <a class="link" target="_blank" href="#">Google Merchandise Store</a> using qualitative and quantitative research to improve the e-Commerce. The timeframe of this project was 2 weeks.<br><br><br>This page is currently underconstruction.
+        <p>A case study of the <a class="link" target="_blank" href="#">Google Merchandise Store</a> using qualitative and quantitative research to improve the e-Commerce. The timeframe of this project was 2 weeks.<br><br><br>This page is currently under construction.
         </p>
         <h3>Findings</h3>
         <p>After distilling data from Google Analytics and creating usability tests to confirm these observations, I discovered that surprisingly the Google Merchandise Store has a lot of room for improvement. The focus of this case study is on the user flow of finding products and the check-out process, other areas of the site require attention but are outside the scope of this project.
@@ -38,7 +38,7 @@
         <ul>
           <li>Google Analytics</li>
           <li>Illustrator</li>
-          <li>Indesign</li>
+          <li>InDesign</li>
           <li>QuickTime Player (to record usability tests)</li>
         </ul>
       </div>
@@ -66,7 +66,7 @@
           <figcaption>Overlay of sessions.</figcaption>
         </figure>
         <div class="content-block">
-          <p>Because I wasn't accessing the Google Analytics as admin (Google gives everyone access to their merchandise store's analytics) I couldn't track people across devices, so I am making the assumption that people search on their desktops – at work – and then in their lunch breaks or commutes they are making the purchases on thier phones.</p>
+          <p>Because I wasn't accessing the Google Analytics as admin (Google gives everyone access to their merchandise store's analytics) I couldn't track people across devices, so I am making the assumption that people search on their desktops – at work – and then in their lunch breaks or commutes they are making the purchases on their phones.</p>
         </div>
         <figure class="wide-image">
           <img class="responsive-h" src="img/qual-and-quan/google-merch-slide4.jpg" alt="xxx">
