--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
   <link rel="stylesheet" href="/css/main.css">
   <link href="https://fonts.googleapis.com/css?family=EB+Garamond:400,700|Roboto:300,400,700" rel="stylesheet">
   <meta name="theme-color" content="#C6CCCA">
+  <link rel="shortcut icon" type="image/png" href="img/favicon16x16.png"/>
 </head>
 <body>
   <nav id="nav">
@@ -20,7 +21,7 @@
   </nav>
   <header class="content-block hero">
     <!-- <h1>Under construction</h1> -->
-    <h1>Hey, my name is David and I am a <span>UX</span> and <span>graphic design</span> professional.</h1>
+    <h1>Hi, my name is David and I am a <span>UX</span> and <span>graphic design</span> professional.</h1>
     <h2>Hiring in Barcelona? Or remotely? <a class="link" href="mailto:davidjspencer@gmail.com">Email me</a> and lets get in touch.</h2>
   </header>
   <main id="projects" class="projects content-block">
