--- a/qual-and-quan.html
+++ b/qual-and-quan.html
@@ -29,10 +29,7 @@
     <main>
       <div class="content-block">
         <h3>Challenge</h3>
-        <p>A case study of the <a class="link" target="_blank" href="#">Google Merchandise Store</a> using qualitative and quantitative research to improve the e-Commerce. The timeframe of this project was 2 weeks.<br><br><br>This page is currently under construction.
-        </p>
-        <h3>Findings</h3>
-        <p>After distilling data from Google Analytics and creating usability tests to confirm these observations, I discovered that surprisingly the Google Merchandise Store has a lot of room for improvement. The focus of this case study is on the user flow of finding products and the check-out process, other areas of the site require attention but are outside the scope of this project.
+        <p>A case study of the <a class="link" target="_blank" rel="nofollow" href="#">Google Merchandise Store</a> using qualitative and quantitative research to improve the e-Commerce. The timeframe of this project was 2 weeks.<br><br><br>This page is currently under construction.
         </p>
         <h4><span>Software used</span></h4>
         <ul>
@@ -41,57 +38,88 @@
           <li>InDesign</li>
           <li>QuickTime Player (to record usability tests)</li>
         </ul>
+        <h3>Findings</h3>
+        <p>After distilling data from Google Analytics and creating usability tests to confirm these observations, I discovered that the Google Merchandise Store has a lot of room for improvement. The focus of this case study is on the user flow of finding products and the check-out process, other areas of the site require attention but are outside the scope of this project.
+        </p>
+        <p>Some recommended changes and Cart UI improvements to tackle checkout-out abandonment rate of 96.11% <span>[Fig. 1]</span>.</p>
       </div>
+      <figure class="wide-image">
+          <img class="responsive-h" src="img/qual-and-quan/google-merch-slide13.jpg" alt="Image of recommended UI changes to decrease check-out abandonment">
+          <figcaption>Fig. 1 Recommended Cart UI changes to decrease check-out abandonment.</figcaption>
+        </figure>
       <div class="content-block">
         <h3>Who are our users and how do they shop?</h3>
-        <p>Before creating the usability tests, I wanted to gather data to see who our users are and how do they interact with the site. Perhaps not surprising to find is that over a third of sessions are from desktop devices.
+        <p>Before creating the usability tests, I wanted to gather data to see who our users are and how do they interact with the site. Over a third of sessions are from desktop devices <span>[Fig. 2]</span>.
         </p>
       </div>
       <figure class="wide-image">
         <img class="responsive-h" src="img/qual-and-quan/google-merch-slide.jpg" alt="Pie chart showing users per device.">
-        <figcaption>Pie chart of users per device.</figcaption>
+        <figcaption>Fig. 2 Pie chart of users per device.</figcaption>
       </figure>
       <div class="content-block">
-        <p>Considering the ratio of desktop sessions to mobile it was a little surprising to find that the majority of transactions actually come from mobile.</p>
+        <p>Considering the ratio of desktop sessions to mobile it was a little surprising to find that the majority of transactions actually come from mobile devices <span>[Fig. 3]</span>.</p>
       </div>
         <figure class="wide-image">
           <img class="responsive-h" src="img/qual-and-quan/google-merch-slide2.jpg" alt="Stacked bar chart of transaction per time of day">
-          <figcaption>Graph of transactions per device by time of day.</figcaption>
+          <figcaption>Fig. 3 Graph of transactions per device by time of day.</figcaption>
         </figure>
         <div class="content-block">
-          <p>I delved into this phenomenon a little further, so I looked at the sessions at each time of day and overlayed it on to the transactions.</p>
+          <p>I delved into this phenomenon a little further, so I looked at the sessions at each time of day and overlaid it on to the transactions <span>[Fig. 4]</span>.</p>
         </div>
         <figure class="wide-image">
           <img class="responsive-h" src="img/qual-and-quan/google-merch-slide3.jpg" alt="Stacked bar chart of transaction per time of day with sessions overlay.">
-          <figcaption>Overlay of sessions.</figcaption>
+          <figcaption>Fig. 4 Overlay of sessions.</figcaption>
         </figure>
         <div class="content-block">
-          <p>Because I wasn't accessing the Google Analytics as admin (Google gives everyone access to their merchandise store's analytics) I couldn't track people across devices, so I am making the assumption that people search on their desktops – at work – and then in their lunch breaks or commutes they are making the purchases on their phones.</p>
+          <p>Google gives everyone access to their merchandise store's analytics, but this access isn't at admin level so not all info is available. I couldn't track people across devices, so my inference is an  assumption that people search on their desktops – at work – and then in their lunch break or commute they are making the purchases on their phones.</p>
+
+          <p>Another interesting finding was how virtually no-one uses the site search bar <span>[Fig. 5]</span>. This could be influenced by an unnecessary animation that hides the search bar on scroll. To see the search bar, one has to be at the very top of the page (window.pageYOffset = 0).</p>
         </div>
         <figure class="wide-image">
-          <img class="responsive-h" src="img/qual-and-quan/google-merch-slide4.jpg" alt="xxx">
-          <figcaption>xxx</figcaption>
+          <img class="responsive-h" src="img/qual-and-quan/google-merch-slide6.jpg" alt="Pie chart of site search usage.">
+          <figcaption>Fig. 5 Site search usage</figcaption>
         </figure>
+        <div class="content-block">
+          <p>Although an interesting insight, in the usability tests, even once the users found the search bar (taking up to 10 minutes in one case) they didn't feel compelled to use it. They wanted to see a more general view of the products when shopping, shopping by category and seeing the different styles and colours was preferred. One user stated, ‘To be honest with you I didn’t even notice the search box, I wouldn’t have used it for the Onesie. Maybe for the pen I would have used the search. I tend to search by category anyway.’</p>
+          <p>The strongest performing category on the eCommerce store is Apparel <span>[Fig. 6]</span>.</p>
+        </div>
+        <figure class="wide-image">
+          <img class="responsive-h" src="img/qual-and-quan/google-merch-slide4.jpg" alt="Imgage of sales by category.">
+          <figcaption>Fig. 6 Sales by category in April 2019.</figcaption>
+        </figure>
+        <div class="content-block">
+          <p>An alarming statistic is the check-out abandonment rate of 96.11% <span>[Fig. 7]</span>, I offer UI solutions to this further on after insights from the usability tests.</p>
+        </div>
         <figure class="wide-image">
           <img class="responsive-h" src="img/qual-and-quan/google-merch-slide5.jpg" alt="xxx">
-          <figcaption>xxx</figcaption>
+          <figcaption>Fig. 7 Shopping drop-offs</figcaption>
         </figure>
+        <div class="content-block">
+          <h3>Usability testing</h3>
+          <p>I conducted 3 usability tests and showed each person an image of a product to be added to the shopping cart, one at a time <span>[Fig. 8]</span>. After the 4 items were added to the cart, the users checked-out until the payment screen. The 4 tasks, adding an item to the cart, were timed.</p>
+        </div>
         <figure class="wide-image">
-          <img class="responsive-h" src="img/qual-and-quan/google-merch-slide6.jpg" alt="xxx">
-          <figcaption>xxx</figcaption>
+          <img class="responsive-h" src="img/qual-and-quan/google-merch-slide7.jpg" alt="image of the usability test products.">
+          <figcaption>Fig. 8 The products that were to be found and added to the cart.</figcaption>
         </figure>
+        <div class="content-block">
+          <p>Task 1, find the 'YouTube Kid's Onesie White', proved to be difficult for all 3 testers... But why? <span>[Fig. 9]</span></p>
+        </div>
         <figure class="wide-image">
-          <img class="responsive-h" src="img/qual-and-quan/google-merch-slide7.jpg" alt="xxx">
-          <figcaption>xxx</figcaption>
+          <img class="responsive-h" src="img/qual-and-quan/google-merch-slide8.jpg" alt="Image of Comparative results of the time the tasks took each user.">
+          <figcaption>Fig. 9 Comparative results of the time the tasks took each user.</figcaption>
         </figure>
+        <div class="content-block">
+          <p>The biggest confusion the site caused the users were the broken links at the bottom of the Home page <span>[Fig. 10]</span>. Upon seeing an image of a similar item to what they were looking for and it being titled 'View all kids Apparel', each user clicked on this. Instead of being directed to the Kids Apparel category, as expected, they were directed to the specific item pictured, 'Google Protector Onesie Navy'.</p>
+        </div>
         <figure class="wide-image">
-          <img class="responsive-h" src="img/qual-and-quan/google-merch-slide8.jpg" alt="xxx">
-          <figcaption>xxx</figcaption>
+          <img class="responsive-h" src="img/qual-and-quan/google-merch-slide9.jpg" alt="Image of broken links.">
+          <figcaption>Fig. 10 Broken category links go to specific product item, not category.</figcaption>
         </figure>
-        <figure class="wide-image">
-          <img class="responsive-h" src="img/qual-and-quan/google-merch-slide9.jpg" alt="xxx">
-          <figcaption>xxx</figcaption>
-        </figure>
+        <div class="content-block">
+          <p>This was true for each of the 'Shop by Category' links, causing a lot of confusion, ‘Ah huh, somehow I found another section, I don’t know how that worked out’</p>
+          <p>Unfortunately the confusion wasn't limited to broken links. Each user encountered a problem when adding apparel to the cart. Each time the user clicked 'Add to Cart', the choose size input was overlooked.</p>
+        </div>
         <figure class="wide-image">
           <img class="responsive-h" src="img/qual-and-quan/google-merch-slide10.jpg" alt="xxx">
           <figcaption>xxx</figcaption>
