--- a/qual-and-quan.html
+++ b/qual-and-quan.html
@@ -112,6 +112,7 @@
           <figcaption>Fig. 9 Comparative results of the time the tasks took each user.</figcaption>
         </figure>
         <div class="content-block">
+          <h4>Making the user think</h4>
           <p>The biggest confusion the site caused the users were the broken links at the bottom of the Home page <span>[Fig. 10]</span>. Upon seeing an image of a similar item to what they were looking for and it being titled 'View all kids Apparel', each user clicked on this. Instead of being directed to the Kids Apparel category, as expected, they were directed to the specific item pictured, 'Google Protector Onesie Navy'.</p>
         </div>
         <figure class="wide-image">
@@ -120,24 +121,52 @@
         </figure>
         <div class="content-block">
           <p>This was true for each of the 'Shop by Category' links, causing a lot of confusion, ‘Ah huh, somehow I found another section, I don’t know how that worked out’</p>
-          <p>Unfortunately the confusion wasn't limited to broken links. Each user encountered a problem when adding apparel to the cart. Each time the user clicked 'Add to Cart', the choose size input was overlooked.</p>
+          <p>Unfortunately the confusion wasn't limited to the broken links. All users encountered a problem when adding apparel to the cart <span>[Fig. 11]</span>. Each time the user clicked 'Add to Cart', the choose size input was overlooked and the error modal didn't allow for size selection. The user had to close the modal and then choose the size.</p>
         </div>
         <figure class="wide-image">
-          <img class="responsive-h" src="img/qual-and-quan/google-merch-slide10.jpg" alt="xxx">
-          <figcaption>xxx</figcaption>
+          <img class="responsive-h" src="img/qual-and-quan/google-merch-slide10.jpg" alt="Image of no size chosen error.">
+          <figcaption>Fig. 11 Overlooking size selection.</figcaption>
         </figure>
+        <div class="content-block">
+          <p>Why did the user miss the 'Choose Size' selection? The select option isn't styled like a drop-down and the button 'Add to Cart' isn't styled like a button <span>[Fig. 12]</span>. Both these interactive elements don't have affordance and increase the cognitive load on the user. Furthermore, one the user clicks on the 'Choose Size' drop-down, they are met with bizarre abbreviations for apparel sizes; SM, MD and LG. One user commented, ‘SM, I don’t know what that is… Small medium?’.</p>
+        </div>
         <figure class="wide-image">
-          <img class="responsive-h" src="img/qual-and-quan/google-merch-slide11.jpg" alt="xxx">
-          <figcaption>xxx</figcaption>
+          <img class="responsive-h" src="img/qual-and-quan/google-merch-slide11.jpg" alt="Image of selecting size.">
+          <figcaption>Fig. 12 Select size confusion.</figcaption>
         </figure>
+        <div class="content-block">
+          <h4>Improving the cart &amp; check-out</h4>
+          <p>The current Cart <span>[Fig.13]</span> needs to be imporved to reduce drop-offs further down the funnel</p>
+        </div>
         <figure class="wide-image">
-          <img class="responsive-h" src="img/qual-and-quan/google-merch-slide12.jpg" alt="xxx">
-          <figcaption>xxx</figcaption>
+          <img class="responsive-h" src="img/qual-and-quan/google-merch-slide12.jpg" alt="Image of the current shopping cart.">
+          <figcaption>Fig. 13 The current Shopping Cart.</figcaption>
         </figure>
+        <div class="content-block">
+          <p>xxx</p>
+        </div>
+
         <figure class="wide-image">
           <img class="responsive-h" src="img/qual-and-quan/google-merch-slide13.jpg" alt="xxx">
           <figcaption>xxx</figcaption>
         </figure>
+        <div class="content-block">
+          <p>xxx</p>
+        </div>
+        <figure class="wide-image">
+          <img class="responsive-h" src="img/qual-and-quan/google-merch-slide14.jpg" alt="xxx">
+          <figcaption>xxx</figcaption>
+        </figure>
+        <div class="content-block">
+          <p>xxx</p>
+        </div>
+        <figure class="wide-image">
+          <img class="responsive-h" src="img/qual-and-quan/google-merch-slide15.jpg" alt="xxx">
+          <figcaption>xxx</figcaption>
+        </figure>
+        <div class="content-block">
+          <p>xxx</p>
+        </div>
         <div class="project-nav">
           <div class="project-prev">
             <a href="fomo-app.html">
