--- a/qual-and-quan.html
+++ b/qual-and-quan.html
@@ -120,7 +120,7 @@
           <figcaption>Fig. 10 Broken category links go to specific product item, not category.</figcaption>
         </figure>
         <div class="content-block">
-          <p>This was true for each of the 'Shop by Category' links, causing a lot of confusion, ‘Ah huh, somehow I found another section, I don’t know how that worked out’</p>
+          <p>This was true for each of the 'Shop by Category' links, causing a lot of confusion. A user said, ‘Ah huh, somehow I found another section, I don’t know how that worked out’</p>
           <p>Unfortunately the confusion wasn't limited to the broken links. All users encountered a problem when adding apparel to the cart <span>[Fig. 11]</span>. Each time the user clicked 'Add to Cart', the choose size input was overlooked and the error modal didn't allow for size selection. The user had to close the modal and then choose the size.</p>
         </div>
         <figure class="wide-image">
