--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
         <img src="https://via.placeholder.com/400x300" alt="">
       </div>
       <div class="card-text">
-        <p>More to come...</p>
+        <p>More Projects Soon</p>
         <p><span>Come back soon</span><span>Under construction</span>
         </p>
       </div>
