--- a/qual-and-quan.html
+++ b/qual-and-quan.html
@@ -82,7 +82,7 @@
           <figcaption>Fig. 5 Site search usage</figcaption>
         </figure>
         <div class="content-block">
-          <p>Although an interesting insight, in the usability tests, even once the users found the search bar (taking up to 10 minutes in one case) they didn't feel compelled to use it. They wanted to see a more general view of the products when shopping, shopping by category and seeing the different styles and colours was preferred. One user stated, ‘To be honest with you I didn’t even notice the search box, I wouldn’t have used it for the Onesie. Maybe for the pen I would have used the search. I tend to search by category anyway.’</p>
+          <p>Although an interesting insight, in the usability tests, even once the users found the search bar (taking up to 10 minutes in one case) they didn't feel compelled to use it. They wanted to see a more general view of the products when shopping, shopping by category and seeing the different styles and colours was preferred. One user stated, "To be honest with you I didn’t even notice the search box, I wouldn’t have used it for the Onesie. Maybe for the pen I would have used the search. I tend to search by category anyway."</p>
           <p>The strongest performing category on the eCommerce store is Apparel <span>[Fig. 6]</span>.</p>
         </div>
         <figure class="wide-image">
@@ -120,7 +120,7 @@
           <figcaption>Fig. 10 Broken category links go to specific product item, not category.</figcaption>
         </figure>
         <div class="content-block">
-          <p>This was true for each of the 'Shop by Category' links, causing a lot of confusion. A user said, ‘Ah huh, somehow I found another section, I don’t know how that worked out’</p>
+          <p>This was true for each of the 'Shop by Category' links, causing a lot of confusion. A user said, "Ah huh, somehow I found another section, I don’t know how that worked out"</p>
           <p>Unfortunately the confusion wasn't limited to the broken links. All users encountered a problem when adding apparel to the cart <span>[Fig. 11]</span>. Each time the user clicked 'Add to Cart', the choose size input was overlooked and the error modal didn't allow for size selection. The user had to close the modal and then choose the size.</p>
         </div>
         <figure class="wide-image">
@@ -128,7 +128,7 @@
           <figcaption>Fig. 11 Overlooking size selection.</figcaption>
         </figure>
         <div class="content-block">
-          <p>Why did the user miss the 'Choose Size' selection? The select option isn't styled like a drop-down and the button 'Add to Cart' isn't styled like a button <span>[Fig. 12]</span>. Both these interactive elements don't have affordance and increase the cognitive load on the user. Furthermore, one the user clicks on the 'Choose Size' drop-down, they are met with bizarre abbreviations for apparel sizes; SM, MD and LG. One user commented, ‘SM, I don’t know what that is… Small medium?’.</p>
+          <p>Why did the user miss the 'Choose Size' selection? The select option isn't styled like a drop-down and the button 'Add to Cart' isn't styled like a button <span>[Fig. 12]</span>. Both these interactive elements don't have affordance and increase the cognitive load on the user. Furthermore, one the user clicks on the 'Choose Size' drop-down, they are met with bizarre abbreviations for apparel sizes; SM, MD and LG. One user commented, "SM, I don’t know what that is… Small medium?".</p>
         </div>
         <figure class="wide-image">
           <img class="responsive-h" src="img/qual-and-quan/google-merch-slide11.jpg" alt="Image of selecting size.">
