--- a/fomo-app.html
+++ b/fomo-app.html
@@ -97,7 +97,7 @@
         <li>Experience FoMO</li>
       </ul>
     </div>
-    <figure class="wide-image">
+    <figure class="">
       <img class="responsive-h" src="img/fomo-empathy-map.png" alt="Picture of an empathy map">
       <figcaption>Findings from the interviews as a empathy map</figcaption>
     </figure>
