need summary quan

--- a/qual-and-quan.html
+++ b/qual-and-quan.html
@@ -128,7 +128,7 @@
           <figcaption>Fig. 11 Overlooking size selection.</figcaption>
         </figure>
         <div class="content-block">
-          <p>Why did the user miss the 'Choose Size' selection? The select option isn't styled like a drop-down and the button 'Add to Cart' isn't styled like a button <span>[Fig. 12]</span>. Both these interactive elements don't have affordance and increase the cognitive load on the user. Furthermore, one the user clicks on the 'Choose Size' drop-down, they are met with bizarre abbreviations for apparel sizes; SM, MD and LG. One user commented, "SM, I don’t know what that is… Small medium?".</p>
+          <p>Why did the user miss the 'Choose Size' selection? The select option isn't styled like a drop-down and the button 'Add to Cart' isn't styled like a button <span>[Fig. 12]</span>. Both these interactive elements don't have the proper affordance and increase the cognitive load on the user. Furthermore, one the user clicks on the 'Choose Size' drop-down, they are met with bizarre abbreviations for apparel sizes; SM, MD and LG. One user commented, "SM, I don’t know what that is… Small medium?".</p>
         </div>
         <figure class="wide-image">
           <img class="responsive-h" src="img/qual-and-quan/google-merch-slide11.jpg" alt="Image of selecting size.">
@@ -136,36 +136,36 @@
         </figure>
         <div class="content-block">
           <h4>Improving the cart &amp; check-out</h4>
-          <p>The current Cart <span>[Fig.13]</span> needs to be imporved to reduce drop-offs further down the funnel</p>
+          <p>The current Cart <span>[Fig.13]</span>  can be improved to reduce drop-offs further down the funnel.</p>
         </div>
         <figure class="wide-image">
           <img class="responsive-h" src="img/qual-and-quan/google-merch-slide12.jpg" alt="Image of the current shopping cart.">
           <figcaption>Fig. 13 The current Shopping Cart.</figcaption>
         </figure>
         <div class="content-block">
-          <p>xxx</p>
+          <p>Even these simple changes <span>[Fig. 14]</span> could have a big impact on reducing abandonment and helping the user through the check-out process. None of the users that I tested noticed the 'Estimate Shipping', making the 'Estimate Shipping' look like a button (once again improper affordance) could improve check-out abandonment because users will realise they don't have to go further into the funnel to get shipping and tax pricing. This same rational can also be attributed to displaying the payment options on the cart, rather than waiting until the Payment page.</p>
         </div>
 
         <figure class="wide-image">
-          <img class="responsive-h" src="img/qual-and-quan/google-merch-slide13.jpg" alt="xxx">
-          <figcaption>xxx</figcaption>
+          <img class="responsive-h" src="img/qual-and-quan/google-merch-slide13.jpg" alt="Image of changes to improve the cart.">
+          <figcaption>Fig. 14 Changes to improve the Cart.</figcaption>
         </figure>
         <div class="content-block">
-          <p>xxx</p>
+          <p>Currently one must sign-in to check-out <span>[Fig. 15].</span></p>
         </div>
         <figure class="wide-image">
           <img class="responsive-h" src="img/qual-and-quan/google-merch-slide14.jpg" alt="xxx">
-          <figcaption>xxx</figcaption>
+          <figcaption>Fig. 15</figcaption>
         </figure>
         <div class="content-block">
-          <p>xxx</p>
+          <p>Guest check-outs greatly reduce check-out abandonment <span>[Fig. 16]</span>.</p>
         </div>
         <figure class="wide-image">
           <img class="responsive-h" src="img/qual-and-quan/google-merch-slide15.jpg" alt="xxx">
-          <figcaption>xxx</figcaption>
+          <figcaption>Fig. 16</figcaption>
         </figure>
         <div class="content-block">
-          <p>xxx</p>
+          <p>summary to come...</p>
         </div>
         <div class="project-nav">
           <div class="project-prev">
