--- a/qual-and-quan.html
+++ b/qual-and-quan.html
@@ -43,7 +43,7 @@
         <h3>Findings</h3>
         <p>After distilling data from Google Analytics and creating usability tests to confirm these observations, I discovered that the Google Merchandise Store has a lot of room for improvement. The focus of this case study is on the user flow of finding products and the check-out process, other areas of the site require attention but are outside the scope of this project.
         </p>
-        <p>Some recommended changes and Cart UI improvements to tackle checkout-out abandonment rate of 96.11% <span>[Fig. 1]</span>.</p>
+        <p>Recommended changes and Cart UI improvements to tackle checkout-out abandonment rate of 96.11% <span>[Fig. 1]</span> were realised from usability test insights.</p>
       </div>
       <figure class="wide-image">
           <img class="responsive-h" src="img/qual-and-quan/google-merch-slide13.jpg" alt="Image of recommended UI changes to decrease check-out abandonment">
