--- a/fomo-app.html
+++ b/fomo-app.html
@@ -2,6 +2,13 @@
 <html lang="en">
 
 <head>
+  <!-- Google Tag Manager -->
+<script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
+new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
+j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
+'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
+})(window,document,'script','dataLayer','GTM-MBHTWQF');</script>
+<!-- End Google Tag Manager -->
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
@@ -14,6 +21,10 @@
 </head>
 
 <body>
+  <!-- Google Tag Manager (noscript) -->
+<noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-MBHTWQF"
+height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
+<!-- End Google Tag Manager (noscript) -->
   <nav id="nav">
     <ul>
       <li><a href="index.html">Home</a></li>
@@ -237,6 +248,20 @@
     </div>
   </footer>
   <script type="text/javascript" src="js/scroll.js"></script>
+  <script src="js/privacy.js"></script>
+
+<script>
+  window.addEventListener("load", function(event) {
+    var x = document.getElementById("privacy");
+
+    if (document.cookie.includes('davidspencer_privacy=closed')) {
+      console.log('includes the string');
+    } else {
+      x.style.display = "block";
+    }
+    console.log("All resources finished loading!");
+  });
+</script>
 </body>
 
 </html>
