--- a/qual-and-quan.html
+++ b/qual-and-quan.html
@@ -31,7 +31,7 @@
     <main>
       <div class="content-block">
         <h3>Challenge</h3>
-        <p>A case study of the <a class="link" target="_blank" rel="nofollow" href="#">Google Merchandise Store</a> using qualitative and quantitative research to improve the e-Commerce. The timeframe of this project was 2 weeks.
+        <p>A case study of the <a class="link" target="_blank" rel="nofollow" href="https://shop.googlemerchandisestore.com/">Google Merchandise Store</a> using qualitative and quantitative research to improve the e-Commerce. The timeframe of this project was 2 weeks.
         </p>
         <h4><span>Software used</span></h4>
         <ul>
@@ -121,7 +121,9 @@
         </figure>
         <div class="content-block">
           <p>This was true for each of the 'Shop by Category' links, causing a lot of confusion. A user said, "Ah huh, somehow I found another section, I don’t know how that worked out"</p>
+          <p><span>N.B. I checked back a few weeks later and the broken links were fixed, good work Google!</span></p>
           <p>Unfortunately the confusion wasn't limited to the broken links. All users encountered a problem when adding apparel to the cart <span>[Fig. 11]</span>. Each time the user clicked 'Add to Cart', the choose size input was overlooked and the error modal didn't allow for size selection. The user had to close the modal and then choose the size.</p>
+
         </div>
         <figure class="wide-image">
           <img class="responsive-h" src="img/qual-and-quan/google-merch-slide10.jpg" alt="Image of no size chosen error.">
