--- a/index.html
+++ b/index.html
@@ -39,12 +39,12 @@
       </a>
     </div>
     <div class="card">
-      <a href="qual-and-quan.html">
+      <a href="qual-and-quant.html">
         <div class="card-img">
           <img src="img/Google-Merch-Thumb.jpg" alt="">
         </div>
         <div class="card-text">
-          <p>Qual and Quan Informing UI</p>
+          <p>Qual and Quant Informing UI</p>
           <p><span>Analytics</span><span>Usability Tests</span><span>Data Visualisation</span><span>UI</span>
           </p>
         </div>
