--- a/design-thinking-workshop.html
+++ b/design-thinking-workshop.html
@@ -127,7 +127,7 @@
       </div>
       <div class="project-nav">
         <div class="project-prev">
-          <a href="qual-and-quan.html">
+          <a href="qual-and-quant.html">
             <span class="direction">Previous</span>
             <span class="description">#2 Qual &amp; Quan Informing UI</span>
           </a>
