--- a/fomo-app.html
+++ b/fomo-app.html
@@ -211,7 +211,7 @@
         </a>
       </div>
       <div class="project-next">
-        <a href="qual-and-quan.html">
+        <a href="qual-and-quant.html">
           <span class="direction">Next</span>
           <span class="description">#2 Qual &amp; Quan Informing UI</span>
         </a>
