--- a/qual-and-quant.html
+++ b/qual-and-quant.html
@@ -167,7 +167,8 @@
           <figcaption>Fig. 16</figcaption>
         </figure>
         <div class="content-block">
-          <p>summary to come...</p>
+          <p>With these changes I'd expect a drop in check-out drop-offs and greater user satisfaction with the check-out process. These changes should be tracked further with Analytics concentrating on abandonment rates.</p>
+          <p>It was good to see that the broken category links were fixed weeks later, because this caused a lot of confusion for the user. The affordance on the 'Choose size' option and also the 'Add to cart' button really needs to be changed to reduce 'user error' (it isn't actually a user error, this is a design error). Also a content review is necessary, focusing first on the abbreviations of sizes.</p>
         </div>
         <div class="project-nav">
           <div class="project-prev">
