--- a/qual-and-quant.html
+++ b/qual-and-quant.html
@@ -144,29 +144,30 @@
           <img class="responsive-h" src="img/qual-and-quan/google-merch-slide12.jpg" alt="Image of the current shopping cart.">
           <figcaption>Fig. 13 The current Shopping Cart.</figcaption>
         </figure>
-        <div class="content-block">
-          <p>Even these simple changes <span>[Fig. 14]</span> could have a big impact on reducing abandonment and helping the user through the check-out process. None of the users that I tested noticed the 'Estimate Shipping', making the 'Estimate Shipping' look like a button (once again improper affordance) could improve check-out abandonment because users will realise they don't have to go further into the funnel to get shipping and tax pricing. This same rational can also be attributed to displaying the payment options on the cart, rather than waiting until the Payment page.</p>
-        </div>
-
         <figure class="wide-image">
           <img class="responsive-h" src="img/qual-and-quan/google-merch-slide13.jpg" alt="Image of changes to improve the cart.">
           <figcaption>Fig. 14 Changes to improve the Cart.</figcaption>
         </figure>
         <div class="content-block">
+          <p>Even these simple changes <span>[Fig. 14]</span> could have a big impact on reducing abandonment and helping the user through the check-out process. None of the users that I tested noticed the 'Estimate Shipping', making the 'Estimate Shipping' look like a button (once again improper affordance) could improve check-out abandonment because users will realise they don't have to go further into the funnel to get shipping and tax pricing. This same rational can also be attributed to displaying the payment options on the cart, rather than waiting until the Payment page.</p>
+        </div>
+
+
+        <div class="content-block">
           <p>Currently one must sign-in to check-out <span>[Fig. 15].</span></p>
         </div>
         <figure class="wide-image">
           <img class="responsive-h" src="img/qual-and-quan/google-merch-slide14.jpg" alt="xxx">
-          <figcaption>Fig. 15</figcaption>
+          <figcaption>Fig. 15 Current sign in to check-out page.</figcaption>
+        </figure>
+
+        <figure class="wide-image">
+          <img class="responsive-h" src="img/qual-and-quan/google-merch-slide15.jpg" alt="xxx">
+          <figcaption>Fig. 16 Proposed guest sign in option to check-out.</figcaption>
         </figure>
         <div class="content-block">
           <p>Guest check-outs greatly reduce check-out abandonment <span>[Fig. 16]</span>.</p>
-        </div>
-        <figure class="wide-image">
-          <img class="responsive-h" src="img/qual-and-quan/google-merch-slide15.jpg" alt="xxx">
-          <figcaption>Fig. 16</figcaption>
-        </figure>
-        <div class="content-block">
+
           <p>With these changes I'd expect a drop in check-out drop-offs and greater user satisfaction with the check-out process. These changes should be tracked further with Analytics concentrating on abandonment rates.</p>
           <p>It was good to see that the broken category links were fixed weeks later, because this caused a lot of confusion for the user. The affordance on the 'Choose size' option and also the 'Add to cart' button really needs to be changed to reduce 'user error' (it isn't actually a user error, this is a design error). Also a content review is necessary, focusing first on the abbreviations of sizes.</p>
         </div>
